# rust-lexical

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Debug.md  LICENSE-APACHE-LLVM  LICENSE-Go  LICENSE.md  README.md  SECURITY.md  build.rs  clippy.toml  error.rs  rustfmt.toml  spellcheck.dic  spellcheck.toml  tarpaulin.toml
extras/: Cargo.toml  README.md  clippy.toml
extras/asm/: Cargo.toml
extras/benchmark/: Cargo.toml  README.md  input.rs  profiling.py
extras/core/: Cargo.toml
extras/parse-float/: Cargo.toml
extras/parse-integer/: Cargo.toml
extras/size/: Cargo.toml  Cargo.toml.in
extras/util/: Cargo.toml
extras/write-float/: Cargo.toml
extras/write-integer/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse-float-f32.rs  parse-float-f64.rs  parse-integer-i128.rs  parse-integer-i16.rs  parse-integer-i32.rs  parse-integer-i64.rs  parse-integer-i8.rs  parse-integer-isize.rs  parse-integer-u128.rs  parse-integer-u16.rs  parse-integer-u32.rs  parse-integer-u64.rs  parse-integer-u8.rs  parse-integer-usize.rs  write-float-f32.rs  write-float-f64.rs  write-integer-i128.rs  write-integer-i16.rs  write-integer-i32.rs  write-integer-i64.rs  write-integer-i8.rs  write-integer-isize.rs  write-integer-u128.rs  write-integer-u16.rs  write-integer-u32.rs  write-integer-u64.rs  write-integer-u8.rs  write-integer-usize.rs
lexical/: Cargo.toml
lexical-asm/: Cargo.toml  README.md  build.sh
lexical-asm/src/: lib.rs
lexical-benchmark/algorithm/: Cargo.toml  bigint.rs  division.rs
lexical-benchmark/double_conversion/: CMakeLists.txt  bench.cpp
lexical-benchmark/from_chars/: CMakeLists.txt  bench.cpp
lexical-benchmark/lexical/: Cargo.toml
lexical-benchmark/libcore/: Cargo.toml
lexical-capi/: CHANGELOG  Cargo.toml  README.md  build.rs  runtests.py
lexical-capi/include/: README.md  lexical.h  lexical.hpp  lexical.py
lexical-capi/src/: api.rs  config.rs  ctypes.rs  feature_format.rs  lib.rs  not_feature_format.rs  option.rs  options.rs  result.rs
lexical-capi/tests/: CMakeLists.txt  test_c.cc  test_cc.cc  test_py.py
lexical-core/: CHANGELOG  Cargo.toml  README.md  build.rs
lexical-core/ffi/: README.md  lexical_core.h  lexical_core.hpp  lexical_core.py
lexical-core/fuzz/: Cargo.toml
lexical-core/scripts/: fuzz_debug.sh  fuzz_release.sh
lexical-core/src/: atoi.rs  config.rs  error.rs  ffi.rs  itoa.rs  lib.rs  result.rs
lexical-core/tests/: api_tests.rs  float_pow2_tests.rs  float_radix_tests.rs  issue_97_tests.rs
lexical-derive/: Cargo.toml  README.md
lexical-derive/src/: lib.rs
lexical-derive/tests/: test.rs
lexical-parse-float/: Cargo.toml
lexical-parse-float/docs/: Algorithm.md  Benchmarks.md  BigInteger.md  CompactBenchmarks.md
lexical-parse-float/etc/: bellerophon_table.py  dec2flt_table.py  lemire_table.py  limits.py  powers_table.py
lexical-parse-float/src/: api.rs  bellerophon.rs  bigint.rs  binary.rs  compact.rs  float.rs  fpu.rs  hex.rs  index.rs  lemire.rs  lib.rs  libm.rs  limits.rs  mask.rs  number.rs  options.rs  parse.rs  shared.rs  slow.rs  table.rs  table_bellerophon.rs  table_bellerophon_decimal.rs  table_bellerophon_radix.rs  table_binary.rs  table_decimal.rs  table_large.rs  table_lemire.rs  table_radix.rs  table_small.rs
lexical-parse-float/tests/: api_tests.rs  bellerophon.rs  bellerophon_radix_tests.rs  bellerophon_tests.rs  bigfloat_tests.rs  bigint_tests.rs  binary_tests.rs  float_tests.rs  issue_87_tests.rs  issue_96_tests.rs  issue_98_tests.rs  lemire_tests.rs  libm_tests.rs  limits_tests.rs  mask_tests.rs  number_tests.rs  options_tests.rs  parse_tests.rs  shared_tests.rs  slow_tests.rs  stackvec.rs  stackvec_tests.rs
lexical-parse-integer/: Cargo.toml
lexical-parse-integer/docs/: Algorithm.md  Benchmarks.md  CompactBenchmarks.md  RadixBenchmarks.md
lexical-parse-integer/src/: algorithm.rs  algorithmv2.rs  api.rs  bare.rs  compact.rs  compactv2.rs  error.rs  lib.rs  options.rs  parse.rs  shared.rs  sign.rs
lexical-parse-integer/tests/: algorithm_tests.rs  api_tests.rs  compact_tests.rs  issue_91_tests.rs  issue_96_tests.rs  issue_98_tests.rs  options_tests.rs  partial_tests.rs  util.rs
lexical-test/: Cargo.toml  README.md
lexical-test/src/: main.rs
lexical-test/tests/: issue8.rs
lexical-util/: Cargo.toml  file.rs
lexical-util/docs/: Safety.md
lexical-util/etc/: div128.py  step.py
lexical-util/src/: algorithm.rs  api.rs  ascii.rs  assert.rs  bf16.rs  bigint.rs  buffer.rs  constants.rs  digit.rs  div128.rs  error.rs  extended_float.rs  f16.rs  feature_format.rs  format.rs  format_builder.rs  format_flags.rs  i256.rs  iterator.rs  lib.rs  libm.rs  math.rs  mul.rs  noskip.rs  not_feature_format.rs  num.rs  numtypes.rs  options.rs  prebuilt_formats.rs  result.rs  skip.rs  step.rs  u256.rs
lexical-util/tests/: algorithm_tests.rs  ascii_tests.rs  bf16_tests.rs  digit_tests.rs  div128_tests.rs  f16_tests.rs  feature_format_tests.rs  format_builder_tests.rs  format_flags_tests.rs  iterator_tests.rs  mul_tests.rs  not_feature_format_tests.rs  num_tests.rs  skip_tests.rs
lexical-write-float/: Cargo.toml  file.diff
lexical-write-float/docs/: Algorithm.md  Benchmarks.md  CompactBenchmarks.md
lexical-write-float/etc/: log.py
lexical-write-float/src/: algorithm.rs  api.rs  binary.rs  compact.rs  float.rs  hex.rs  index.rs  lib.rs  options.rs  radix.rs  shared.rs  table.rs  table_dragonbox.rs  table_grisu.rs  write.rs
lexical-write-float/tests/: algorithm_tests.rs  api_tests.rs  binary_tests.rs  compact_tests.rs  hex_tests.rs  issue_224.rs  issue_94_tests.rs  options_tests.rs  parse_radix.rs  radix_tests.rs  util.rs
lexical-write-integer/: Algorithm.md  Benchmarks.md  Cargo.toml
lexical-write-integer/docs/: Algorithm.md  Benchmarks.md  CompactBenchmarks.md  RadixBenchmarks.md
lexical-write-integer/src/: api.rs  (+15 more)
lexical_core/: Cargo.toml
lexical_parse_float/: Cargo.toml
lexical_parse_integer/: Cargo.toml
lexical_util/: Cargo.toml
lexical_write_float/: Cargo.toml
lexical_write_integer/: Algorithm.md  Cargo.toml
(+651 files in other folders)
