[workspace]
members = [
    "lexical",
    "lexical_core",
    "lexical_parse_integer",
    "lexical_parse_float",
    "lexical_write_integer",
    "lexical_write_float",
]

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
