[workspace]
members = [
    "lexical",
    "lexical-core",
    "lexical-parse-integer",
    "lexical-parse-float",
    "lexical-write-integer",
    "lexical-write-float",
]

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
