[workspace]
members = [
    "lexical",
    "lexical-core",
    "lexical-parse-integer",
    "lexical-parse-float",
    "lexical-write-integer",
    "lexical-write-float",
]
resolver = "2"

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
