[package]
name = "lexical-asm"
version = "0.0.1"
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
edition = "2018"
publish = false

[dependencies.lexical-util]
path = "../lexical-util"
default-features = false
features = []

[dependencies.lexical-parse-integer]
path = "../lexical-parse-integer"
default-features = false
features = []

[dependencies.lexical-write-integer]
path = "../lexical-write-integer"
default-features = false
features = []

[features]
std = ["lexical-parse-integer/std", "lexical-write-integer/std"]
radix = ["lexical-parse-integer/radix", "lexical-write-integer/radix"]
power-of-two = ["lexical-parse-integer/power-of-two", "lexical-write-integer/power-of-two"]
format = ["lexical-parse-integer/format"]

[workspace]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true
