[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["parsing", "encoding", "no-std", "value-formatting"]
description = "Lexical, to- and from-string conversion routines."
edition = "2018"
keywords = ["parsing", "lexical", "encoding", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical-core"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical"
version = "0.8.5"
exclude = [
    "assets/*",
    "docs/*",
    "etc/*",
    "cargo-timing*.html"
]

[dependencies.lexical-util]
version = "0.8.5"
default-features = false
path = "../lexical-util"

[dependencies.lexical-parse-integer]
version = "0.8.5"
optional = true
default-features = false
path = "../lexical-parse-integer"

[dependencies.lexical-parse-float]
version = "0.8.5"
optional = true
default-features = false
path = "../lexical-parse-float"

[dependencies.lexical-write-integer]
version = "0.8.5"
optional = true
default-features = false
path = "../lexical-write-integer"

[dependencies.lexical-write-float]
version = "0.8.5"
optional = true
default-features = false
path = "../lexical-write-float"

[dev-dependencies]
approx = "0.5.0"

[features]
# Need to enable all for backwards compatibility.
default = ["std", "write-integers", "write-floats", "parse-integers", "parse-floats"]
# Use the standard library.
std = [
    "lexical-util/std",
    "lexical-write-integer/std",
    "lexical-write-float/std",
    "lexical-parse-integer/std",
    "lexical-parse-float/std"
]
# Add support for writing integers.
write-integers = ["lexical-write-integer", "write", "integers"]
# Add support for writing floats.
write-floats = ["lexical-write-float", "write", "floats"]
# Add support for parsing integers.
parse-integers = ["lexical-parse-integer", "parse", "integers"]
# Add support for parsing floats.
parse-floats = ["lexical-parse-float", "parse", "floats"]

# Add support for parsing power-of-two float strings.
power-of-two = [
    "lexical-util/power-of-two",
    "lexical-write-integer/power-of-two",
    "lexical-write-float/power-of-two",
    "lexical-parse-integer/power-of-two",
    "lexical-parse-float/power-of-two"
]
# Add support for parsing non-decimal float strings.
radix = [
    "lexical-util/radix",
    "lexical-write-integer/radix",
    "lexical-write-float/radix",
    "lexical-parse-integer/radix",
    "lexical-parse-float/radix"
]
# Add support for parsing custom numerical formats.
format = [
    "lexical-util/format",
    "lexical-parse-integer/format",
    "lexical-parse-float/format",
    "lexical-write-integer/format",
    "lexical-write-float/format"
]
# Reduce code size at the cost of performance.
compact = [
    "lexical-write-integer/compact",
    "lexical-write-float/compact",
    "lexical-parse-integer/compact",
    "lexical-parse-float/compact"
]
# Ensure only safe indexing is used.
# This is only relevant for the number writers, since the parsers
# are memory safe by default (and only use memory unsafety when
# is the trivial to prove correct).
safe = [
    "lexical-write-integer/safe",
    "lexical-write-float/safe",
    "lexical-parse-integer/safe",
    "lexical-parse-float/safe"
]
# Add support for nightly-only features.
nightly = [
    "lexical-write-integer/nightly",
    "lexical-write-float/nightly",
    "lexical-parse-integer/nightly",
    "lexical-parse-float/nightly"
]
# Enable support for 16-bit floats.
f16 = [
    "lexical-util/f16",
    "lexical-parse-float/f16",
    "lexical-write-float/f16"
]

# Internal only features.
# Enable the lint checks.
lint = [
    "lexical-util/lint",
    "lexical-write-integer/lint",
    "lexical-write-float/lint",
    "lexical-parse-integer/lint",
    "lexical-parse-float/lint"
]
# Add support for writing numbers.
write = []
# Add support for parsing numbers.
parse = []
# Add support for conversions to or from integers.
integers = []
# Add support for conversions to or from floats.
floats = []

# Currently unsupported.
# Enable support for 128-bit floats.
f128 = [
    "lexical-util/f128",
    "lexical-parse-float/f128",
    "lexical-write-float/f128"
]

[package.metadata.docs.rs]
features = ["radix", "format", "write-integers", "write-floats", "parse-integers", "parse-floats"]
