[package]
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
autobenches = false
categories = ["parsing", "encoding", "no-std", "value-formatting"]
description = "Lexical, to- and from-string conversion routines."
edition = "2021"
keywords = ["parsing", "lexical", "encoding", "no_std"]
license = "MIT/Apache-2.0"
name = "lexical-core"
readme = "README.md"
repository = "https://github.com/Alexhuszagh/rust-lexical"
version = "1.0.6"
rust-version = "1.60.0"
exclude = [
    "assets/*",
    "docs/*",
    "etc/*",
    "cargo-timing*.html"
]

[dependencies.lexical-util]
version = "1.0.7"
default-features = false
path = "../lexical-util"

[dependencies.lexical-parse-integer]
version = "1.0.6"
optional = true
default-features = false
path = "../lexical-parse-integer"

[dependencies.lexical-parse-float]
version = "1.0.6"
optional = true
default-features = false
path = "../lexical-parse-float"

[dependencies.lexical-write-integer]
version = "1.0.6"
optional = true
default-features = false
path = "../lexical-write-integer"

[dependencies.lexical-write-float]
version = "1.0.6"
optional = true
default-features = false
path = "../lexical-write-float"

[features]
# Need to enable all for backwards compatibility.
default = ["std", "write-integers", "write-floats", "parse-integers", "parse-floats"]
# Use the standard library.
std = [
    "lexical-util/std",
    "lexical-write-integer/std",
    "lexical-write-float/std",
    "lexical-parse-integer/std",
    "lexical-parse-float/std"
]
# Add support for writing integers.
write-integers = ["lexical-write-integer"]
# Add support for writing floats.
write-floats = ["lexical-write-float"]
# Add support for parsing integers.
parse-integers = ["lexical-parse-integer"]
# Add support for parsing floats.
parse-floats = ["lexical-parse-float"]

# Add support for parsing power-of-two float strings.
power-of-two = [
    "lexical-util/power-of-two",
    "lexical-write-integer?/power-of-two",
    "lexical-write-float?/power-of-two",
    "lexical-parse-integer?/power-of-two",
    "lexical-parse-float?/power-of-two"
]
# Add support for parsing non-decimal float strings.
radix = [
    "power-of-two",
    "lexical-util/radix",
    "lexical-write-integer?/radix",
    "lexical-write-float?/radix",
    "lexical-parse-integer?/radix",
    "lexical-parse-float?/radix"
]
# Add support for parsing custom numerical formats.
format = [
    "lexical-util/format",
    "lexical-parse-integer?/format",
    "lexical-parse-float?/format",
    "lexical-write-integer?/format",
    "lexical-write-float?/format"
]
# Reduce code size at the cost of performance.
compact = [
    "lexical-write-integer?/compact",
    "lexical-write-float?/compact",
    "lexical-parse-integer?/compact",
    "lexical-parse-float?/compact"
]
# Enable support for 16-bit floats.
f16 = [
    "lexical-util/f16",
    "lexical-parse-float?/f16",
    "lexical-write-float?/f16"
]

# INTERNAL ONLY
# -------------
# Internal only features. These are not meant to be used directly.
# Enable the lint checks.
lint = [
    "lexical-util/lint",
    "lexical-write-integer?/lint",
    "lexical-write-float?/lint",
    "lexical-parse-integer?/lint",
    "lexical-parse-float?/lint"
]

# UNSUPPORTED
# -----------
# Currently unsupported features.
# Enable support for 128-bit floats. Unsupported and unlikely to ever be.
#   https://github.com/Alexhuszagh/rust-lexical/issues/46
f128 = [
    "lexical-util/f128",
    "lexical-parse-float?/f128",
    "lexical-write-float?/f128"
]

# DEPRECATED
# ----------
# These were never supported, however, they exist in case existing code
# uses them. They should not be used under any circumstances and should
# be removed.
parse = ["parse-integers", "parse-floats"]
write = ["write-integers", "write-floats"]
integers = ["parse-integers", "write-integers"]
floats = ["parse-floats", "write-floats"]

[package.metadata.docs.rs]
features = ["radix", "format", "write-integers", "write-floats", "parse-integers", "parse-floats", "f16"]
rustdoc-args = ["--cfg", "docsrs"]
