[package]
name = "lexical-derive"
version = "0.0.1"
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
publish = false

[dependencies]
quote = "1.0"
syn = "1.0"

[dependencies.lexical-core]
path = "../lexical-core"
default-features = false
features = []

[lib]
proc-macro = true

[features]
default = ["no_alloc", "ryu", "std"]

# FEATURES
# --------
no_alloc = ["lexical-core/no_alloc"]
format = ["lexical-core/format"]
grisu3 = ["lexical-core/grisu3"]
power_of_two = ["lexical-core/power_of_two"]
radix = ["lexical-core/radix"]
rounding = ["lexical-core/rounding"]
ryu = ["lexical-core/ryu"]
std = ["lexical-core/std"]
