[package]
name = "lexical-derive"
version = "0.0.1"
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
publish = false

[dependencies]
quote = "1.0"
syn = "1.0"

[dependencies.lexical-core]
path = "../lexical-core"
default-features = false
features = []

[lib]
proc-macro = true

[features]
default = [
    # Sub-crates.
    "parse_floats",
    "parse_integers",
    "write_floats",
    "write_integers",
    # Default features.
    "lemire",
    "no_alloc",
    "ryu",
    "std"
]

# SUBCRATES
# ---------
parse_floats = ["lexical-core/parse_floats"]
parse_integers = ["lexical-core/parse_integers"]
write_floats = ["lexical-core/write_floats"]
write_integers = ["lexical-core/write_integers"]

# FEATURES
# --------
no_alloc = ["lexical-core/no_alloc"]
format = ["lexical-core/format"]
power_of_two = ["lexical-core/power_of_two"]
radix = ["lexical-core/radix"]
rounding = ["lexical-core/rounding"]
ryu = ["lexical-core/ryu"]
std = ["lexical-core/std"]
lemire = ["lexical-core/lemire"]
